# fac

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  Makefile  Makefile.freebsd  Makefile.linux  README.md  TODO.md  Vagrantfile  afl.py  appveyor.yml  arguments.c  arguments.h  better.c  bigbrother.c  bigbrother.h  bilge.c  bilge.h  build-clang.sh  build-deb.sh  build-freebsd.sh  build-linux.sh  build.c  build.h  build.rs  build.sh  clean-all.c  clean.c  configure.fac  configure.py  docker-security.json  environ.c  environ.h  errors.h  fac.c  fac.h  fileaccesses.c  files.c  (+23 more)
.gnupg/: pubring.gpg  trustdb.gpg
bench/: bench.py  catmod.py  cats.py  dependence.py  dependentchains.py  depmod.py  download-data.py  fac-plots.py  generate-plots.py  hierarchy.py  hiermod.py  independent.py  plot-benchmark.py  run_mods.py  sleepy.py  upload-data.sh
benches/: bench.rs
bigbro/: .gitignore  bigbro-freebsd.c  bigbro-linux.c  bigbro.h  errors.h  fileaccesses.c  hashset.h  intmap.c  intmap.h  iterablehash.c  iterablehash.h  linux-proc.h  posixmodel.c  posixmodel.h  realpath.h  run-tests.py  syscalls.fac
bugs/: can-be-built-things-first.sh  changed-input.sh  clean-directory.sh  duplicate-implicit-outputs.sh  edited-cache.sh  exhaustive-and-strict.sh  explicit-build-arguments.sh  fail-on-two-rules-one-output.sh  interrupt.sh  mkdir-not-rerun-when-dir-changes.sh  noop-directory.sh  output-outside-directory.sh  parallel-build.sh  readdir-generated-content.sh  readdir-subdir.sh  readdir.sh  strict-with-dependency-chain.sh  wrong-output.sh
ci/: script.sh
lib/: .gitignore  a.bilge  arrayset.c  arrayset.h  bigbrother.c  bigbrother.h  bigbrotheralt.c  bsdtest.c  categorize_bsd_syscalls.py  darwin-syscalls.py  fileaccesses.c  fileaccessesalt.c  freebsd-syscalls.py  gentables.py  get_syscalls.py  hashset.c  hashset.h  intmap.c  intmap.h  iterablehash.c  iterablehash.h  linux-syscalls.py  listset.c  listset.h  master.py  posixmodel.c  posixmodel.h  sha1.c  sha1.h  syscalls-freebsd.c  syscalls-freebsd.h  syscalls.h  trie.c  trie.h
src/: build.rs  git.rs  lib.rs  main.rs  refset.rs  version.rs
tests/: adding-missing-rule.sh  arrayset.c  assertion-fails.c  assertion-fails.sh  bad-fac-file.sh  bench-dependentchains-big.sh  bench-dependentchains.sh  broken-latex.sh  build-tarball.sh  building-fac-from-git.sh  cache-added.sh  cache-handling.sh  cache-in-home-as-symlink.sh  cached-output-changing.sh  can-be-built-things-first.sh  changed-input.sh  changing-set-of-fac-rules.sh  clean-after-rule-change.sh  clean-directory.sh  clean-with-git-rules.sh  clean.sh  codegen.sh  command-fails-but-produces-files.sh  continual.sh  count-build-steps.sh  dependency-chain.sh  dependency-cycle.sh  dependency-makefiles.sh  dependency.sh  duplicate-implicit-outputs.sh  duplicate-rule.sh  edited-cache.sh  empty-env.sh  empty-facfile.sh  enviorment-variables.sh  estimate-time.sh  exhaustive.sh  fac-lock-file.sh  (+86 more)
(+187 files in other folders)
