[package]
name = "fac"
version = "0.2.0"
authors = ["daveroundy@gmail.com"]
build = "build.rs"

description = "build tool"
license = "GPL-2.0+"
repository = "https://github.com/droundy/fac"
homepage = "https://facio.gitlab.io/fac"
documentation = "http://facio.gitlab.io/fac/doc/fac/index.html"

[lib]
name = "fac"
path = "src/lib.rs"

[[bin]]
name = "fac"
path = "src/main.rs"
doc = false

[dependencies]

libc = "^0.2"
bigbro = "^0.3.15"
clap = "~2.23.3"
num_cpus = "^1.5.0"
metrohash = "^1.0.1"
notify = "^4.0.1"
tinyset = "^0.0.12"

termcolor = "^0.3.2"
isatty = "^0.1.3"
ctrlc = "^3.0"
lazy_static = "^0.2.8"

crude-profiler = "^0.1.7"

[dev-dependencies]
quickcheck = "^0.4.1"

[features]
# Treat warnings as a build error.
strict = []

[profile.release]
debug = true

