[package]
name = "fac"
version = "0.5.2"
authors = ["daveroundy@gmail.com"]
edition = "2018"

description = "build tool"
license = "GPL-2.0+"
repository = "https://github.com/droundy/fac"
homepage = "https://physics.oregonstate.edu/~droundy/fac"
documentation = "https://physics.oregonstate.edu/~droundy/fac/documentation.html"

readme = "README.md"

[badges]
travis-ci = { repository = "droundy/fac", branch = "master" }
appveyor = { repository = "droundy/fac", branch = "master", service = "github"}

[lib]
name = "fac"
path = "src/lib.rs"

[[bin]]
name = "fac"
path = "src/main.rs"
doc = false

[dependencies]

libc = "^0.2"
bigbro = "0.5"
clap = "2.33.0"
num_cpus = "^1.5.0"
metrohash = "^1.0.1"
notify = "^4.0.1"
tinyset = "0.4.1"
pathdiff = "^0.1.0"
git-version = "0.3.4"
internment = "0.3.12"

termcolor = "1.0.5"
atty = "0.2.0"
ctrlc = "^3.0"
lazy_static = "1.4.0"

crude-profiler = "^0.1.7"

[dev-dependencies]
quickcheck = "0.9.0"

[features]
# Treat warnings as a build error.
strict = []

[profile.release]
debug = true

